--- a/organizacoes/templates/organizacoes/organizacoes_projetos.html
+++ b/organizacoes/templates/organizacoes/organizacoes_projetos.html
@@ -45,16 +45,6 @@
       flex: 1;
       max-width: 100%;
     }
-    .indicadores {
-      margin-left: 4px;
-      overflow: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-    }
-    .calc_totais {
-      font-weight: bold !important;
-      color: darkred;
-    }
     @media (max-width: 1280px) {
       .flex-container {flex-direction: column;}
       .flex-item {width: 100%;}
@@ -98,11 +88,11 @@
         <tbody>
           {% for organizacao,projetos,contato in organizacoes_list %} 
             <tr id="tr{{organizacao.id}}" class="item" 
-            {% if contato %}
+              {% if contato %}
                 style="background-color:#{{contato.tipo_retorno.cor}};"
                 data-type="{{contato.tipo_retorno.id}}"
-            {% endif %}>
-            <td style="text-align: center; font-size: 12px;"></td>
+              {% endif %}>
+              <td style="text-align: center; font-size: 12px;"></td>
               <td>
                 {% if organizacao %}
                   <a class="imprimir" href="{% url 'organizacao_completo' organizacao.id %}" target="_blank">{{organizacao.nome}}</a>
@@ -189,10 +179,6 @@
               </td>
 
             </tr>
-          {% empty %}
-            <tr>
-              <td colspan="7" class="text-center">Nenhuma organização cadastrada.</td>
-            </tr>
           {% endfor %}
         </tbody>
       </table>
@@ -208,10 +194,10 @@
         <div style="display: inline-block; border: 1px solid black; margin-top: 16px; padding: 10px; max-width: 100%">
           <b>{% lng "Organizações em tratativas" "Organizations in negotiations" %}:</b> {{organizacoes|length}}<br>
           {% for tipo in tipo_retorno %}
-            <div class="indicadores">
+            <div class="d-flex align-items-start">
               <span data-type="{{tipo.id}}" data-color="#{{tipo.cor}}" data-hide="false" class="show-hide mr-2" style="background-color:#{{tipo.cor}};">&nbsp;&nbsp;&nbsp;</span>
-              {{tipo.nome}}
-              <span id="retorno{{tipo.id}}" class="calc_totais"></span>
+              <span class="text-truncate">{{tipo.nome}}</span>
+              <span id="retorno{{tipo.id}}" class="calc_aux ml-2"></span>
             </div>
           {% endfor %}
         </div>
@@ -253,6 +239,7 @@
           });
 
           function atualiza_situacoes() {
+            $(".calc_aux").css({fontWeight: "bold", color: "darkred"});
             {% for tipo in tipo_retorno %}
               var count = $(".item[data-type='{{tipo.id}}']").length;
               if (count > 0) {
@@ -266,38 +253,44 @@
       </div>
     </div>
 
+    {% comment %} <script>
+      // Tem de estar no div de atualizar
+      $("th").click(function() {numberRows();});
+    </script> {% endcomment %}
+
   </div>
 
   <script>
+
+    function numberRows() {
+      $("#OrganizacoesTable tbody tr").each(function(index) {
+        $(this).find('td:first').text(index + 1);
+      });
+    }
 
     function filtra_data() {
       var filterValue = $("#filterAcompanhamento").val();
       var row = $(".item"); 
       row.hide();
-
+      var tipoRetornoMapping = {
+        {% for g in GRUPO_DE_RETORNO %}
+          "{{ g.1 }}": [
+            {% for tipo in tipo_retorno %}{% if tipo.grupo_de_retorno ==  g.0 %}
+              "{{ tipo.id }}"{% if not forloop.last %}, {% endif %}{% endif %}{% endfor %}
+          ]{% if not forloop.last %}, {% endif %}
+        {% endfor %}
+      };
       row.each(function(i, el) {
         if( filterValue == "todas" || filterValue == $(el).attr("data-type") ) {
             $(el).show();
         }
-        else if( filterValue == "Contratação") {
-          if(["6", "12", "13"].includes($(el).attr("data-type"))) {
-            $(el).show();
-          }
-        }
-        else if( filterValue == "Prospecção") {
-          if(["0", "1", "2", "3"].includes($(el).attr("data-type"))) {
-            $(el).show();
-          }
-        }
-        else if( filterValue == "Retorno") {
-          if(["4", "5"].includes($(el).attr("data-type"))) {
-            $(el).show();
-          }
-        }
-        else if( filterValue == "Relatório") {
-          if(["7", "10", "11"].includes($(el).attr("data-type"))) {
-            $(el).show();
-          }
+        else if (filterValue in tipoRetornoMapping) {
+          var tipoIds = tipoRetornoMapping[filterValue];
+          $(".item").each(function() {
+              if (tipoIds.includes($(this).attr("data-type"))) {
+                  $(this).show();
+              }
+          });
         }
       });
     }
@@ -305,16 +298,11 @@
     $("#filterAcompanhamento").change(function() {
       filtra_data();
       atualiza_situacoes();
-    });  
-    
-    function numberRows() {
-      $("#OrganizacoesTable tbody tr").each(function(index) {
-        $(this).find('td:first').text(index + 1);
-      });
+    });
+
+    function carrega_pagina() {
+      numberRows();
     }
-    
-    // Call numberRows after sorting the table
-    $("th").click(function() {numberRows();});
     
     $(document).ready(function(){
       numberRows();
