--- a/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
+++ b/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
@@ -51,9 +51,6 @@
       white-space: nowrap;
       text-overflow: ellipsis;
     }
-    .calc_indicadores {
-      font-size: 0.8em;
-    }
     @media (max-width: 1280px) {
       .flex-container {flex-direction: column;}
       .flex-item {width: 100%;}
@@ -135,11 +132,11 @@
         <tbody>
         {% for organizacao,disponiveis,submetidas,contato in organizacoes_list %} 
           <tr id="tr{{organizacao.id}}" class="item" 
-           {% if contato %}
-            style="background-color:#{{contato.tipo_retorno.cor}};"       
-            data-type="{{contato.tipo_retorno.id}}"
-           {% endif %}>
-          <td style="text-align: center; font-size: 12px;"></td>
+            {% if contato %}
+              style="background-color:#{{contato.tipo_retorno.cor}};"       
+              data-type="{{contato.tipo_retorno.id}}"
+            {% endif %}>
+            <td style="text-align: center; font-size: 12px;"></td>
             <td>
               {% if organizacao %}
                 <a class="imprimir" href="{% url 'organizacao_completo' organizacao.id %}" target="_blank">{{organizacao.nome}}</a>
@@ -313,10 +310,10 @@
           <div style="display: inline-block; border: 1px solid black; margin-top: 16px; padding: 10px; max-width: 100%">
             <b>{% lng "Organizações contactadas recentemente" "Recently contacted organizations" %} ({{total_organizacoes}}):</b><br>
             {% for tipo in tipo_retorno %}
-              <div class="indicadores">
+              <div class="d-flex align-items-start">
                 <span data-type="{{tipo.id}}" data-color="#{{tipo.cor}}" data-hide="false" class="show-hide mr-2" style="background-color:#{{tipo.cor}};">&nbsp;&nbsp;&nbsp;</span>
-                {{tipo.nome}}
-                <span id="retorno{{tipo.id}}" class="calc_indicadores"></span>
+                <span class="text-truncate">{{tipo.nome}}</span>
+                <span id="retorno{{tipo.id}}" class="calc_aux ml-2"></span>
               </div>
             {% endfor %}
           </div>
@@ -379,6 +376,7 @@
             }
 
             function atualiza_situacoes() {
+              $(".calc_aux").css("font-size", "0.8em");
               {% for tipo in tipo_retorno %}
                 document.getElementById("retorno{{tipo.id}}").innerHTML = preenche_cursos({{tipo.id}});
               {% endfor %}
@@ -505,10 +503,10 @@
       });
     </script>
 
-    <script>
+    {% comment %} <script>
       // Call numberRows after sorting the table
       $("th").click(function() {numberRows();});
-    </script>
+    </script> {% endcomment %}
 
   </div>
 
@@ -521,7 +519,7 @@
         $(this).find('td:first').text(index + 1);
       });
     }    
-    numberRows();
+    {% comment %} numberRows(); {% endcomment %}
 
     function estrelas(id, pos) {
       for (let i = 1; i <= 5; i++) {
@@ -563,37 +561,31 @@
         success: function (data) {},
         {% include "ajax_error_function.js" %}
       });
-
     }
 
     function filtra_data() {
       var filterValue = $("#filterAcompanhamento").val();
       var row = $(".item"); 
       row.hide();
-
+      var tipoRetornoMapping = {
+        {% for g in GRUPO_DE_RETORNO %}
+          "{{ g.1 }}": [
+            {% for tipo in tipo_retorno %}{% if tipo.grupo_de_retorno ==  g.0 %}
+              "{{ tipo.id }}"{% if not forloop.last %}, {% endif %}{% endif %}{% endfor %}
+          ]{% if not forloop.last %}, {% endif %}
+        {% endfor %}
+      };
       row.each(function(i, el) {
         if( filterValue == "todas" || filterValue == $(el).attr("data-type") ) {
             $(el).show();
         }
-        else if( filterValue == "Contratação") {
-          if(["6", "12", "13"].includes($(el).attr("data-type"))) {
-            $(el).show();
-          }
-        }
-        else if( filterValue == "Prospecção") {
-          if(["0", "1", "2", "3"].includes($(el).attr("data-type"))) {
-            $(el).show();
-          }
-        }
-        else if( filterValue == "Retorno") {
-          if(["4", "5"].includes($(el).attr("data-type"))) {
-            $(el).show();
-          }
-        }
-        else if( filterValue == "Relatório") {
-          if(["7", "10", "11"].includes($(el).attr("data-type"))) {
-            $(el).show();
-          }
+        else if (filterValue in tipoRetornoMapping) {
+          var tipoIds = tipoRetornoMapping[filterValue];
+          $(".item").each(function() {
+              if (tipoIds.includes($(this).attr("data-type"))) {
+                  $(this).show();
+              }
+          });
         }
       });
     }
@@ -603,9 +595,14 @@
       atualiza_situacoes();
     });  
 
+    function carrega_pagina() {
+      numberRows();
+    }
+
     $(document).ready(function(){
       filtra_data();
       atualiza_situacoes();
+      carrega_pagina()
     });
 
     $(".periodo").change(function(){
@@ -624,7 +621,7 @@
                 $(".tooltip-inner").remove();
                 $(".tooltip-arrow").remove();
                 filtra_data();
-                numberRows();
+                carrega_pagina();
                 $("#spinner").css("visibility", "hidden");
             },
             {% include "ajax_error_function.js" %}
