--- a/templates/edicoes.html
+++ b/templates/edicoes.html
@@ -54,6 +54,14 @@
       margin-bottom: 0.75rem;
     }
 
+    .bootstrap-select {
+      max-width: 100%;
+      width: 100%;
+    }
+    
+    .bootstrap-select .dropdown-menu {
+        max-width: 97vw;  /* Evita que estoure a tela */
+    }
   </style>
 
   <div id="container_edicao" class="container">
@@ -240,7 +248,7 @@
             <select id="filterAcompanhamento" class="selectpicker custom-select w-auto form-control form-control-sm" data-tableId="OrganizacoesTable">
               <option value="todas" class="troca_lingua" data-pt="todas contactadas" data-en="all contacted">todas contactadas</option>
               {% for retorno in tipo_retorno %}
-                {% ifchanged retorno.grupo_de_retorno %}{% if retorno.grupo_de_retorno %}<option class="special_filter" value="{{retorno.grupo_de_retorno}}">&#x21a6; {{retorno.get_grupo_de_retorno_display}} &#x21a4;</option>{% else %}<option disabled="disabled">-----------</option>{% endif %}{% endifchanged %}
+                {% ifchanged retorno.grupo_de_retorno %}{% if retorno.grupo_de_retorno %}<option class="special_filter" value="{{retorno.get_grupo_de_retorno_display}}">&#x21a6; {{retorno.get_grupo_de_retorno_display}} &#x21a4;</option>{% else %}<option disabled="disabled">-----------</option>{% endif %}{% endifchanged %}
                 <option value="{{retorno.id}}">{{retorno.nome}}</option>
               {% endfor %}
             </select>
